--- a/icecast/trunk/ices0/trunk/configure.in
+++ b/icecast/trunk/ices0/trunk/configure.in
@@ -270,6 +270,7 @@ then
   LDFLAGS="$LDFLAGS -L$with_lame_libraries"
 fi
 
+have_LAME="no"
 if test "$with_lame" != "no"
 then
   AC_CACHE_SAVE
@@ -279,7 +280,6 @@ then
     LDFLAGS="$LDFLAGS -L$with_lame/lib"
   fi
 
-  have_LAME="no"
   AC_CHECK_HEADER(lame/lame.h, [
     have_LAME="maybe",
     AC_DEFINE(HAVE_LAME_LAME_H, 1, [ Use <lame/lame.h> instead of <lame.h> ])
@@ -296,7 +296,7 @@ then
       ICES_OBJECTS="$ICES_OBJECTS reencode.o"
       LIBM="-lm"
       AC_DEFINE(HAVE_LIBLAME, 1, [ Define if you have the LAME MP3 library ])
-      ],, -lm)
+      ], [have_LAME="no"], -lm)
   fi
 
   dnl lame_encode_flush_nogap was added at the same time that lame was made
@@ -335,6 +335,7 @@ then
   fi
 fi
 
+have_vorbis="no"
 if test "$with_vorbis" != "no"
 then
   AC_CACHE_SAVE
@@ -344,7 +345,6 @@ then
     LDFLAGS="$LDFLAGS -L$with_vorbis/lib"
   fi
 
-  have_vorbis="no"
   AC_CHECK_HEADER(vorbis/vorbisfile.h, have_vorbis="maybe")
   if test "$have_vorbis" != "no"
   then
@@ -353,7 +353,7 @@ then
       LIBS="$LIBS -lvorbisfile -lvorbis -logg"
       AC_DEFINE(HAVE_LIBVORBISFILE, 1, [ Define if you have libvorbisfile ])
       have_vorbis="yes"
-    ],,-lvorbis -logg)
+    ],[have_vorbis="no"],-lvorbis -logg)
   fi
 fi
 
@@ -370,6 +370,7 @@ fi
 AC_ARG_WITH(perl,
 [  --with-perl[=DIR]           enable perl interpreter [found in DIR]])
 
+have_perl="no"
 PERL=perl
 if test "$with_perl" != "no"
 then
@@ -391,7 +392,6 @@ then
   CPPFLAGS="$CPPFLAGS $PERLCFLAGS"
   LIBS="$LIBS $PERLLIBS"
 
-  have_perl="no"
   AC_CHECK_FUNCS(perl_construct)
   if test "$ac_cv_func_perl_construct" != "no"
   then
@@ -434,6 +434,7 @@ then
   LDFLAGS="$LDFLAGS -L$with_python_libraries"
 fi
 
+have_python="no"
 if test "$with_python" != "no"
 then
   AC_CACHE_SAVE
@@ -443,7 +444,6 @@ then
     LDFLAGS="$LDFLAGS -L$with_python/lib"
   fi
 
-  have_python="no"
   AC_CHECK_HEADER(Python.h, [
     have_python="maybe",
     AC_DEFINE(HAVE_PYTHON_H, 1, [ Define if you have Python.h ])])
@@ -460,7 +460,7 @@ then
           have_python="yes"
           LIBM="-lm"
           LIBDL="-ldl"
-          AC_DEFINE(HAVE_LIBPYTHON, 1, [ Define if you have the python library ])],,-lm -ldl)
+          AC_DEFINE(HAVE_LIBPYTHON, 1, [ Define if you have the python library ])],[have_python="no"],-lm -ldl)
       fi
     done
   fi
@@ -479,6 +479,7 @@ fi
 AC_ARG_WITH(xml-config,
 [  --with-xml-config=PATH      Use xml-config in PATH to find libxml ])
 
+have_xml="no"
 if test "$with_xml_config" != "no"
 then
   if test -n "$with_xml_config" -a "$with_xml_config" != "yes"
@@ -499,6 +500,7 @@ then
     CPPFLAGS="$CPPFLAGS `$XMLCONFIG --cflags`"
     ICES_OBJECTS="$ICES_OBJECTS ices_config.o"
     AC_CHECK_HEADERS([libxml/parser.h gnome-xml/parser.h parser.h])
+    have_xml="yes"
   else
     AC_MSG_RESULT([Compiling without libxml support - no configfiles])
   fi
@@ -516,6 +518,18 @@ AC_OUTPUT([Makefile src/Makefile src/playlist/Makefile
 
 AC_MSG_RESULT([Compiling with CPPFLAGS=$CPPFLAGS])
 AC_MSG_RESULT([Linking with LDFLAGS=$LDFLAGS $LIBS])
+AC_MSG_RESULT([Features:])
+if test "$have_libshout" != "yes"
+then
+  AC_MSG_RESULT([  libshout: builtin])
+else
+  AC_MSG_RESULT([  libshout: system])
+fi
+AC_MSG_RESULT([  LAME    : $have_LAME])
+AC_MSG_RESULT([  Vorbis  : $have_vorbis])
+AC_MSG_RESULT([  Perl    : $have_perl])
+AC_MSG_RESULT([  Python  : $have_python])
+AC_MSG_RESULT([  XML     : $have_xml])
 
 if test "$GMAKE"
 then
