Cleanup - dropped DJ hooks, I have no clear idea how they were meant to   be used and playlist scripting seems able to handle whatever they were   supposed to.

--- a/icecast/trunk/ices0/trunk/src/Makefile.am
+++ b/icecast/trunk/ices0/trunk/src/Makefile.am
@@ -12,11 +12,10 @@ endif
 bin_PROGRAMS = ices
 
 noinst_HEADERS = definitions.h setup.h log.h stream.h util.h cue.h \
-	dj.h metadata.h in_vorbis.h mp3.h id3.h signals.h reencode.h \
-	icestypes.h
+	metadata.h in_vorbis.h mp3.h id3.h signals.h reencode.h icestypes.h
 
-ices_SOURCES = ices.c log.c setup.c stream.c util.c dj.c mp3.c cue.c \
-	metadata.c id3.c signals.c
+ices_SOURCES = ices.c log.c setup.c stream.c util.c mp3.c cue.c metadata.c \
+	id3.c signals.c
 
 EXTRA_ices_SOURCES = in_vorbis.c reencode.c
 
