Sunday in the park with autoconf revisited. What is it about Sundays and autoconf?
DESTDIR should work now. It should be easier to debianise.

--- a/icecast/trunk/ices0/trunk/conf/Makefile.am
+++ b/icecast/trunk/ices0/trunk/conf/Makefile.am
@@ -2,9 +2,7 @@
 
 AUTOMAKE_OPTIONS = foreign
 
-all: 
+sysconf_DATA = ices.conf.dist
+mod_DATA = ices.py.dist ices.pm.dist
 
-etcdir = $(ICES_ETCDIR_INST)
-etc_DATA = ices.conf.dist
-
-EXTRA_DIST = $(etc_DATA)
+EXTRA_DIST = $(sysconf_DATA) $(mod_DATA)
