--- a/icecast/trunk/ices0/trunk/configure.in
+++ b/icecast/trunk/ices0/trunk/configure.in
@@ -6,10 +6,10 @@ ICES_MINOR=1
 ICES_MICRO=0
 
 dnl Check to see if ICES_SPECIAL is overridden on commandline
-dnl if test -z "$ICES_SPECIAL"
-dnl then
-dnl  ICES_SPECIAL=""
-dnl fi
+if test -z "$ICES_SPECIAL" -a -d ${srcdir}/CVS
+then
+  ICES_SPECIAL="cvs"
+fi
 
 if test -n "$ICES_MICRO" -a "$ICES_MICRO" != "0"
 then
@@ -28,14 +28,7 @@ fi
 VERSION="$ICES_VERSION"
 
 AC_MSG_RESULT([Building ices $VERSION...])
-
 AM_INIT_AUTOMAKE(ices, $VERSION)
-AM_MAINTAINER_MODE
-AM_CONDITIONAL(FSSTD, test x$enable_fsstd = xyes)
-AC_SUBST(USE_FSSTD)
-
-AM_PROG_LIBTOOL
-AC_SUBST(LIBTOOL_DEPS)
 
 dnl reasonable guesses for where stuff is installed
 if test "$prefix" = "NONE"
@@ -43,52 +36,27 @@ then
   prefix="/usr/local/icecast"
 fi
 
-AC_ARG_ENABLE(fsstd, [  --enable-fsstd              install files following FSSTD [default=no]], , enable_fsstd=no)
+AC_ARG_WITH(docdir,
+[  --with-docdir=DIR       ices documentation in DIR [PREFIX/doc/ices]],
+[ices_cv_docdir="$with_docdir"],
+[ices_cv_docdir='${prefix}/doc/ices'])
 
-if test "x$enable_fsstd" = "xyes"; then
-	ICES_BINDIR=/usr/bin
-	ICES_SBINDIR=/usr/sbin
-	ICES_ETCDIR=/etc/icecast
-	ICES_ETCDIR_INST=/etc/icecast
-	ICES_MODULE_DIR=/usr/share/icecast/modules
-	ICES_SHAREDIR=/usr/share/icecast
-	ICES_LOGDIR=/var/log/icecast
-	ICES_LOGDIR_INST=/var/log/icecast
-	ICES_DOCDIR=/usr/doc/ices-${ICES_VERSION_SMALL}
-	USE_FSSTD=yes
-else
-	ICES_BINDIR=${prefix}/bin
-	ICES_SBINDIR=${prefix}/bin
-	ICES_ETCDIR=conf
-	ICES_ETCDIR_INST=${prefix}/conf
-	ICES_MODULEDIR=${prefix}/modules
-	ICES_SHAREDIR=${prefix}
-	ICES_LOGDIR=logs
-	ICES_LOGDIR_INST=${prefix}/logs
-	ICES_TEMPLATEDIR=templates
-	ICES_TEMPLATEDIR_INST=${prefix}/templates
-	ICES_STATICDIR=static
-	ICES_STATICDIR_INST=${prefix}/static
-	ICES_DOCDIR=${prefix}/doc
-	USE_FSSTD=no
-fi
+docdir="$ices_cv_docdir"
+AC_SUBST(docdir)
 
+AC_ARG_WITH(moddir,
+[  --with-moddir=DIR       ices playlist modules in DIR [SYSCONFDIR/modules]],
+[ices_cv_moddir="$with_moddir"],
+[ices_cv_moddir='${sysconfdir}/modules'])
 
-AC_DEFINE_UNQUOTED(VERSION, "$VERSION")
-AC_SUBST(VERSION)
+moddir="$ices_cv_moddir"
+AC_SUBST(moddir)
 
-AC_SUBST(ICES_BINDIR)
-AC_SUBST(ICES_SBINDIR)
-AC_SUBST(ICES_ETCDIR_INST)
-AC_SUBST(ICES_LOGDIR_INST)
-AC_SUBST(ICES_DOCDIR)
+dnl -- Finally, actual autoconf stuff --
 
-AC_DEFINE_UNQUOTED(ICES_ETCDIR, "$ICES_ETCDIR")
-AC_SUBST(ICES_ETCDIR)
-AC_DEFINE_UNQUOTED(ICES_LOGDIR, "$ICES_LOGDIR")
-AC_SUBST(ICES_LOGDIR)
-AC_DEFINE_UNQUOTED(ICES_MODULEDIR, "$ICES_MODULEDIR")
-AC_SUBST(ICES_MODULEDIR)
+AM_MAINTAINER_MODE
+AM_PROG_LIBTOOL
+AC_SUBST(LIBTOOL_DEPS)
 
 AC_ARG_PROGRAM
 AC_PROG_RANLIB
@@ -220,7 +188,7 @@ then
   fi
 
   AC_CHECK_HEADER(shout/shout.h, [
-    AC_DEFINE(HAVE_SHOUT_SHOUT_H, 1, [ Define if you have <shout/shout.h ])
+    AC_DEFINE(HAVE_SHOUT_SHOUT_H, 1, [Define if you have <shout/shout.h>])
     have_libshout="maybe"
   ])
   if test "$have_libshout" != "no"
@@ -287,7 +255,7 @@ then
 
   AC_CHECK_HEADER(lame/lame.h, [
     have_LAME="maybe",
-    AC_DEFINE(HAVE_LAME_LAME_H, 1, [ Use <lame/lame.h> instead of <lame.h> ])
+    AC_DEFINE(HAVE_LAME_LAME_H, 1, [Use <lame/lame.h> instead of <lame.h>])
     ],
     AC_CHECK_HEADER(lame.h, [
       have_LAME="maybe"]))
@@ -300,7 +268,7 @@ then
       LIBS="$LIBS -lmp3lame"
       ICES_OBJECTS="$ICES_OBJECTS reencode.o"
       LIBM="-lm"
-      AC_DEFINE(HAVE_LIBLAME, 1, [ Define if you have the LAME MP3 library ])
+      AC_DEFINE(HAVE_LIBLAME, 1, [Define if you have the LAME MP3 library])
       ], [have_LAME="no"], -lm)
   fi
 
@@ -311,7 +279,7 @@ then
   if test "$have_LAME" = "yes"
   then
   AC_CHECK_LIB(mp3lame, lame_encode_flush_nogap, [
-    AC_DEFINE(HAVE_LAME_NOGAP, 1, [ Define if libmp3lame has lame_encode_flush_nogap ])],, -lm)
+    AC_DEFINE(HAVE_LAME_NOGAP, 1, [Define if libmp3lame has lame_encode_flush_nogap])],, -lm)
   fi
 fi
 
@@ -356,7 +324,7 @@ then
     AC_CHECK_LIB(vorbisfile, ov_open, [
       ICES_OBJECTS="$ICES_OBJECTS in_vorbis.o"
       LIBS="$LIBS -lvorbisfile -lvorbis -logg"
-      AC_DEFINE(HAVE_LIBVORBISFILE, 1, [ Define if you have libvorbisfile ])
+      AC_DEFINE(HAVE_LIBVORBISFILE, 1, [Define if you have libvorbisfile])
       have_vorbis="yes"
     ],[have_vorbis="no"],-lvorbis -logg)
   fi
@@ -402,7 +370,7 @@ then
   then
     have_perl="yes"
     PLAYLIST_OBJECTS="$PLAYLIST_OBJECTS pm_perl.o"
-    AC_DEFINE(HAVE_LIBPERL, 1, [ Define if you have perl libraries ])
+    AC_DEFINE(HAVE_LIBPERL, 1, [Define if you have perl libraries])
   else
     CPPFLAGS="$saved_CPPFLAGS"
     LIBS="$saved_LIBS"
@@ -451,7 +419,7 @@ then
 
   AC_CHECK_HEADER(Python.h, [
     have_python="maybe",
-    AC_DEFINE(HAVE_PYTHON_H, 1, [ Define if you have Python.h ])])
+    AC_DEFINE(HAVE_PYTHON_H, 1, [Define if you have Python.h])])
 
   if test "$have_python" != "no"
   then
@@ -465,7 +433,7 @@ then
           have_python="yes"
           LIBM="-lm"
           LIBDL="-ldl"
-          AC_DEFINE(HAVE_LIBPYTHON, 1, [ Define if you have the python library ])],[have_python="no"],-lm -ldl)
+          AC_DEFINE(HAVE_LIBPYTHON, 1, [Define if you have the python library])],[have_python="no"],-lm -ldl)
       fi
     done
   fi
@@ -500,7 +468,7 @@ then
 
   if test -n "$XMLCONFIG"
   then
-    AC_DEFINE(HAVE_LIBXML, 1, [ Define if you have the GNOME XML library ])
+    AC_DEFINE(HAVE_LIBXML, 1, [Define if you have the GNOME XML library])
     LIBS="$LIBS `$XMLCONFIG --libs`"
     CPPFLAGS="$CPPFLAGS `$XMLCONFIG --cflags`"
     ICES_OBJECTS="$ICES_OBJECTS ices_config.o"
