--- a/icecast/trunk/ices0/trunk/src/Makefile.am
+++ b/icecast/trunk/ices0/trunk/src/Makefile.am
@@ -11,13 +11,14 @@ endif
 
 bin_PROGRAMS = ices
 
-noinst_HEADERS = definitions.h setup.h log.h stream.h util.h cue.h \
-	metadata.h in_vorbis.h mp3.h id3.h signals.h reencode.h icestypes.h
+noinst_HEADERS = icestypes.h definitions.h setup.h log.h stream.h util.h \
+	cue.h metadata.h in_vorbis.h mp3.h id3.h signals.h reencode.h \
+	ices_config.h
 
 ices_SOURCES = ices.c log.c setup.c stream.c util.c mp3.c cue.c metadata.c \
 	id3.c signals.c
 
-EXTRA_ices_SOURCES = in_vorbis.c reencode.c
+EXTRA_ices_SOURCES = ices_config.c in_vorbis.c reencode.c
 
 ices_LDADD = @ICES_OBJECTS@ playlist/libplaylist.a \
 	../resolver/libresolver.a ../thread/libicethread.a \
@@ -25,10 +26,6 @@ ices_LDADD = @ICES_OBJECTS@ playlist/libplaylist.a \
 
 ices_DEPENDENCIES = @ICES_OBJECTS@
 
-INCLUDES = -I$(top_srcdir)/resolver -I$(top_srcdir)/thread $(SHOUT_INCLUDES)
+INCLUDES = -DICES_ETCDIR=\"$(sysconfdir)\" \
+	-I$(top_srcdir)/resolver -I$(top_srcdir)/thread $(SHOUT_INCLUDES)
 
-if FSSTD
-bindir=$(ICES_SBINDIR)
-else
-bindir=$(ICES_BINDIR)
-endif
