--- a/icecast/trunk/ices0/trunk/conf/ices.conf.dist.in
+++ b/icecast/trunk/ices0/trunk/conf/ices.conf.dist.in
@@ -62,6 +62,11 @@
 		<!-- The name of the mountpoint on the icecast server -->
 		<ices:Mountpoint>ices</ices:Mountpoint>
 
+		<!-- The name of the dumpfile on the server for your stream
+		     Don't set this unless you know what you're doing.
+		<ices:Dumpfile>ices.dump</ices:Dumpfile>
+		-->
+
 		<!-- The name of you stream, not the name of the song! -->
 		<ices:Name>Cool ices default name from XML</ices:Name>
 
