doc tweaks, renamed ices_stream_config_t to ices_stream_t (how about just stream_t?).
Added new error-handling code in stream.c which will hopefully do a better
job with transient transport errors. But the codepath is cluttered
enough now that I suspect I've taken the wrong approach.

--- a/icecast/trunk/ices0/trunk/doc/ices.1.in
+++ b/icecast/trunk/ices0/trunk/doc/ices.1.in
@@ -11,14 +11,13 @@ ices \- stream MP3 audio to an icecast server
 .\" Playlist options
 .RB [\| \-D
 .IR basedir \|]
-.RB [\| \-S
-.IR interpreter
-.RB [\|[\| \-F
-.IR playlist 
-.RB [\| \-r \|]\|]
-\||
+.RB [\| \-S\ builtin
+.RB [\| \-F
+.IR playlist \|]
+.RB [\| \-r \|]\|]\||[\| \-S
+.BR python \|| perl
 .RB [\| \-M
-.IR module \|]\|]\|]
+.IR module \|]\|]
 .\" Server options
 .RB [\| \-h
 .IR host \|]
