--- a/icecast/trunk/ices0/trunk/configure.in
+++ b/icecast/trunk/ices0/trunk/configure.in
@@ -161,8 +161,9 @@ CPPFLAGS="$CPPFLAGS $THREADCPPFLAGS"
 dnl -- System header check --
 
 AC_HEADER_SYS_WAIT
-AC_CHECK_HEADERS([fcntl.h sys/types.h sys/socket.h sys/stat.h unistd.h \
-  signal.h sys/signal.h errno.h])
+AC_CHECK_HEADERS([errno.h fcntl.h signal.h sys/signal.h sys/socket.h \
+  sys/stat.h sys/time.h sys/types.h unistd.h])
+AC_HEADER_TIME
 
 AC_TYPE_PID_T
 AC_TYPE_SIZE_T
@@ -472,7 +473,6 @@ then
     LIBS="$LIBS `$XMLCONFIG --libs`"
     CPPFLAGS="$CPPFLAGS `$XMLCONFIG --cflags`"
     ICES_OBJECTS="$ICES_OBJECTS ices_config.o"
-    AC_CHECK_HEADERS([libxml/parser.h gnome-xml/parser.h parser.h])
     have_xml="yes"
   else
     AC_MSG_RESULT([Compiling without libxml support - no configfiles])
