--- a/icecast/trunk/ices0/trunk/conf/ices.conf.dist.in
+++ b/icecast/trunk/ices0/trunk/conf/ices.conf.dist.in
@@ -1,90 +1,69 @@
 <?xml version="1.0"?>
-<!-- Please note that all the Configuration Keywords are case sensitive! -->
 <ices:Configuration xmlns:ices="http://www.icecast.org/projects/ices">
-	<ices:Playlist>
-		<!-- This is the filename used as a playlist when using
-		     the builtin playlist handler. If you are choose to
-		     randomize the playlist, then the internal one will
-		     be in ices.playlist.$pid in the specified base
-		     directory -->
-		<ices:File>apan.txt</ices:File>
+  <Playlist>
+    <!-- This is the filename used as a playlist when using the builtin 
+	 playlist handler. -->
+    <File>apan.txt</File>
+    <!-- Set this to 0 if you don't want to randomize your playlist, and to
+	 1 if you do. -->
+    <Randomize>1</Randomize>
+    <!-- Either builtin, perl, or python. -->
+    <Type>builtin</Type>
+    <!-- Module name to pass to the playlist handler if using  perl or python.
+	 If you use the builtin playlist handler then this is ignored -->
+    <Module>ices</Module>
+  </Playlist>
 
-		<!-- Set this to 0 if you don't want to randomize your
-		     playlist, and to 1 if you do. -->
-		<ices:Randomize>1</ices:Randomize>
+  <Server>
+    <!-- Hostname or ip of the icecast server you want to connect to -->
+    <Hostname>localhost</Hostname>
+    <!-- Port of the same -->
+    <Port>8000</Port>
+    <!-- Encoder password on the icecast server -->
+    <Password>letmein</Password>
+    <!-- Header protocol to use when communicating with the server.
+         Use xaudiocast for icecast, or icy for shoutcast compatibility -->
+    <Protocol>xaudiocast</Protocol>
+  </Server>
 
-		<!-- Either builtin, perl, or python. Chooses what
-		     playlist module to use. See README.playlist -->
-		<ices:Type>builtin</ices:Type>
+  <Execution>
+    <!-- Set this to 1 if you want ices to launch in the background as a
+         daemon -->
+    <Background>0</Background>
+    <!-- Set this to 1 if you want to see more verbose output from ices -->
+    <Verbose>0</Verbose>
+    <!-- This directory specifies where ices should put the logfile, cue file
+	 and pid file (if daemonizing). -->
+    <BaseDirectory>/tmp</BaseDirectory>
+  </Execution>
 
-		<!-- Module name to pass to the playlist handler if using
-		     perl or python. If you use the builtin playlist
-		     handler then this is ignored -->
-		<ices:Module>ices</ices:Module>
-	</ices:Playlist>
-	<ices:Server>
-		<!-- Hostname or ip of the icecast server you want to
-		     connect to -->
-		<ices:Hostname>localhost</ices:Hostname>
+  <Stream>
+    <!-- The name of the mountpoint on the icecast server -->
+    <Mountpoint>ices</Mountpoint>
+    <!-- The name of the dumpfile on the server for your stream. DO NOT set
+	 this unless you know what you're doing.
+    <Dumpfile>ices.dump</Dumpfile>
+    -->
+    <!-- The name of you stream, not the name of the song! -->
+    <Name>Cool ices default name from XML</Name>
+    <!-- Genre of your stream, be it rock or pop or whatever -->
+    <Genre>Cool ices genre from XML</Genre>
+    <!-- Longer description of your stream -->
+    <Description>Cool ices description from XML</Description>
+    <!-- URL to a page describing your stream -->
+    <URL>Cool ices URL from XML</URL>
+    <!-- 0 if you don't want the icecast server to publish your stream on
+	 the yp server, 1 if you do -->
+    <Public>1</Public>
 
-		<!-- Port of the same -->
-		<ices:Port>8000</ices:Port>
-
-		<!-- Encoder password on the icecast server -->
-		<ices:Password>letmein</ices:Password>
-
-		<!-- Header protocol to use when communicating with
-		     the server. Use xaudiocast except when you can't,
-		     then use icy -->
-		<ices:Protocol>xaudiocast</ices:Protocol>
-	</ices:Server>
-	<ices:Execution>
-		<!-- Set this to 1 if you want ices to launch in the
-		     background as a daemon -->
-		<ices:Background>0</ices:Background>
-
-		<!-- Set this to 1 if you want to see more verbose 
-		     output from ices -->
-		<ices:Verbose>0</ices:Verbose>
-		
-		<!-- This directory specifies where ices should put
-		     the logfile, internal playlist (if randomizing),
-		     cue file and pid file (if daemonizing). -->
-		<ices:BaseDirectory>/tmp</ices:BaseDirectory>
-
-		<!-- If this is set to 1, and ices is compiled with
-		     liblame support, ices will reencode the stream
-		     on the fly to the bitrate specified with the
-		     Stream/Bitrate option -->
-		<ices:Reencode>0</ices:Reencode>
-	</ices:Execution>
-	<ices:Stream>
-		<!-- The name of the mountpoint on the icecast server -->
-		<ices:Mountpoint>ices</ices:Mountpoint>
-
-		<!-- The name of the dumpfile on the server for your stream
-		     Don't set this unless you know what you're doing.
-		<ices:Dumpfile>ices.dump</ices:Dumpfile>
-		-->
-
-		<!-- The name of you stream, not the name of the song! -->
-		<ices:Name>Cool ices default name from XML</ices:Name>
-
-		<!-- Genre of your stream, be it rock or pop or whatever -->
-		<ices:Genre>Cool ices genre from XML</ices:Genre>
-
-		<!-- Longer description of your stream -->
-		<ices:Description>Cool ices description from XML</ices:Description>
-		<!-- URL to a page describing your stream -->
-		<ices:URL>Cool ices URL from XML</ices:URL>
-	
-		<!-- Stream bitrate, used to specify bitrate if reencoding,
-		     otherwize just used for display on yp and on the
-		     server. Try to keep it accurate -->
-		<ices:Bitrate>128</ices:Bitrate>
-
-		<!-- 0 if you don't want the icecast server to publicate
-		     your stream on the yp server, 1 if you do -->
-		<ices:Public>1</ices:Public>
-	</ices:Stream>
+    <!-- Stream bitrate, used to specify bitrate if reencoding, otherwise
+	 just used for display on yp and on the server. Try to keep it
+	 accurate -->
+    <Bitrate>128</Bitrate>
+    <!-- If this is set to 1, and ices is compiled with liblame support,
+	 ices will reencode the stream on the fly to the stream bitrate. -->
+    <Reencode>0</Reencode>
+    <!-- Number of channels to reencode to, 1 for mono or 2 for stereo -->
+    <Channels>2</Channels>
+  </Stream>
 </ices:Configuration>
