Use ices.pm as an actual module, and search in the module directory for it. ices.pm must now return 1 at the end as a side-effect. Anyone doing what the docs said would be doing this already, wink wink.

--- a/icecast/trunk/ices0/trunk/conf/ices.pm.dist
+++ b/icecast/trunk/ices0/trunk/conf/ices.pm.dist
@@ -1,5 +1,5 @@
-# This is just a skeleton, something for you to start with.
-# All these functions should exist in your module
+# At least ices_get_next must be defined. And, like all perl modules, it
+# must return 1 at the end.
 
 # Function called to initialize your python environment.
 # Should return 1 if ok, and 0 if something went wrong.
@@ -33,3 +33,5 @@ sub ices_get_metadata {
 sub ices_get_lineno {
 	return 1;
 }
+
+return 1;
