--- a/icecast/trunk/ices0/trunk/doc/ices.1.in
+++ b/icecast/trunk/ices0/trunk/doc/ices.1.in
@@ -19,6 +19,8 @@ ices \- stream MP3 audio to an icecast server
 .RB [\| \-M
 .IR module \|]\|]
 .\" Server options
+.RB [\|[\| \-m
+.IR mount \|]
 .RB [\| \-h
 .IR host \|]
 .RB [\| \-p
@@ -27,8 +29,6 @@ ices \- stream MP3 audio to an icecast server
 .IR password \|]
 .RB [\| -i \|]
 .\" Stream options
-.RB [\|[\| \-m
-.IR mount \|]
 .RB [\| \-n
 .IR name \|]
 .RB [\| \-g
@@ -130,7 +130,20 @@ instead of the default,
 .BR ices .
 Otherwise this option does nothing.
 
-.SS "Server options"
+.SS "Stream options"
+.TP
+.BI \-m \ mount
+Create a stream on the icecast server accessible at the mountpoint
+.IR mount .
+Clients may access your stream at
+.RI http:// host : port / mount .
+This option may be specified more than once to create multiple streams
+out of the same playlist. All stream options following each mount
+option apply to that mount only.
+
+If this option is not specified, an implicit mount named
+.B ices
+is implied.
 .TP
 .BI \-h \ host
 Connect to the icecast server on
@@ -156,21 +169,6 @@ method to log in, instead of the icecast-compatible
 method. If you have to use this you will lose some functionality, most
 notably the ability to specify mountpoints (and hence, multiple
 streams).
-
-.SS "Stream options"
-.TP
-.BI \-m \ mount
-Create a stream on the icecast server accessible at the mountpoint
-.IR mount .
-Clients may access your stream at
-.RI http:// host : port / mount .
-This option may be specified more than once to create multiple streams
-out of the same playlist. All stream options following each mount
-option apply to that mount only.
-
-If this option is not specified, an implicit mount named
-.B ices
-is implied.
 .TP
 .BI \-n \ name
 Set the name of this stream to
@@ -270,6 +268,18 @@ Causes ices to close and reopen the log file.
 .TP
 .B SIGUSR1
 Causes ices to skip to the next track in the playlist immediately.
+
+.SH FILES
+.TP
+.I @sysconfdir@/ices.conf
+Default XML configuration file. May be overriden with
+.BR -c .
+.TP
+.I @moddir@/ices.py
+Default path to the python playlist module.
+.TP
+.I @moddir@/ices.pm
+Default path to the perl playlist module.
 
 .SH AUTHORS
 ices was originally written by Alexander Haväng <eel@icecast.org>.
