--- a/icecast/trunk/ices0/trunk/configure.in
+++ b/icecast/trunk/ices0/trunk/configure.in
@@ -424,7 +424,7 @@ then
 
   if test "$have_python" != "no"
   then
-    for lib in python python2.0 python1.6 python1.5
+    for lib in python python2.2 python2.1 python2.0 python1.6 python1.5
     do
       if test "$have_python" != "yes"
       then
