--- a/icecast/trunk/ices0/trunk/configure.in
+++ b/icecast/trunk/ices0/trunk/configure.in
@@ -194,7 +194,8 @@ then
   ])
   if test "$have_libshout" != "no"
   then
-    AC_CHECK_LIB(shout, shout_init_connection, [
+    dnl shout_strerror was introduced later so it serves as a version check.
+    AC_CHECK_LIB(shout, shout_strerror, [
       have_libshout="yes"
       LIBS="$LIBS -lshout"
     ])
@@ -204,7 +205,7 @@ then
   then
     if test -n "$with_libshout"
     then
-      AC_MSG_ERROR([Could not find an installed shout library])
+      AC_MSG_ERROR([Could not find a usable installed libshout])
     else
       AC_MSG_RESULT([Installed libshout not found, using builtin])
     fi
