Removing thread code from logging was surprisingly easy :)

--- a/icecast/trunk/ices0/trunk/Makefile.am
+++ b/icecast/trunk/ices0/trunk/Makefile.am
@@ -2,6 +2,6 @@
 
 AUTOMAKE_OPTIONS = foreign
 
-SUBDIRS = @subdirs@ log src conf doc
+SUBDIRS = @subdirs@ src conf doc
 
 EXTRA_DIST = README FEATURES BUGS AUTHORS TODO INSTALL COPYING CHANGES FAQ TESTED README.playlist README.old FILES
