--- a/icecast/trunk/ices0/branches/ices-libshout_2/Makefile.am
+++ b/icecast/trunk/ices0/branches/ices-libshout_2/Makefile.am
@@ -5,3 +5,6 @@ AUTOMAKE_OPTIONS = foreign
 SUBDIRS = @subdirs@ src conf doc
 
 EXTRA_DIST = README FEATURES BUGS AUTHORS TODO INSTALL COPYING CHANGES FAQ TESTED README.playlist README.old FILES
+
+libtool: $(LIBTOOL_DEPS)
+	$(SHELL) ./config.status --recheck
