README.old seems quite redundant

--- a/icecast/trunk/ices0/branches/ices-libshout_2/Makefile.am
+++ b/icecast/trunk/ices0/branches/ices-libshout_2/Makefile.am
@@ -4,7 +4,7 @@ AUTOMAKE_OPTIONS = foreign
 
 SUBDIRS = @subdirs@ src conf doc
 
-EXTRA_DIST = README FEATURES BUGS AUTHORS TODO INSTALL COPYING CHANGES FAQ TESTED README.playlist README.old FILES
+EXTRA_DIST = README FEATURES BUGS AUTHORS TODO INSTALL COPYING CHANGES FAQ TESTED README.playlist FILES
 
 libtool: $(LIBTOOL_DEPS)
 	$(SHELL) ./config.status --recheck
