--- a/icecast/trunk/ices0/trunk/doc/ices.1.in
+++ b/icecast/trunk/ices0/trunk/doc/ices.1.in
@@ -1,4 +1,4 @@
-.TH "ices" "1" "June 2001" "ices @VERSION@" "Icecast media streaming system"
+.TH "ices" "1" "January 2003" "ices @VERSION@" "Icecast media streaming system"
 .SH NAME
 ices \- stream MP3 audio to an icecast server
 
@@ -264,7 +264,8 @@ Ices handles the following signals specially:
 Causes ices to perform a clean shutdown.
 .TP
 .B SIGHUP
-Causes ices to close and reopen the log file.
+Causes ices to close and reopen the log file and the playlist. It will also
+reload and restart the playlist script if you're using one.
 .TP
 .B SIGUSR1
 Causes ices to skip to the next track in the playlist immediately.
